<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- common -->
    <string name="app_name">百分百</string>

    <!-- xlist -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- registe -->
    <string name="phone_hint">请输入11位手机号码</string>
    <string name="get_ecode">获取验证码</string>
    <string name="agreement">我已阅读并同意《百分百用户协议》</string>

    <string name="sms_send_hint">短信已经发送到%1$s,请稍等</string>
    <string name="vcode_hint">请输入短信验证码</string>
    <string name="password_hint">请输入6-20位密码</string>
    <string name="realname_hint">请输入您的真实姓名</string>
    <string name="idcard_hint">请输入您的身份证号码</string>
    <string name="regist">注册</string>
    <string name="resend">%1$ds后重新获取</string>

    <!-- login -->
    <string name="login_text">登录</string>
    <string name="login_accout_hint">邮箱/用户名/手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_fast_registe">快速注册</string>
    <!-- more -->
    <string name="more_share_text">分享设置</string>
    <string name="more_notice_text">消息通知</string>
    <string name="more_cache_text">清空缓存</string>
    <string name="more_comment_text">意见反馈</string>
    <string name="more_update_text">检查更新</string>
    <string name="more_about_text">关于</string>
    <string name="more_mark_text">给我评分</string>
    <string name="more_recommend_text">推荐给好友</string>

    <!-- personal -->
    <string name="personal_title">我的百分百</string>
    <string name="personal_publish_text">我的发布</string>
    <string name="personal_favorite_text">我的收藏</string>
    <string name="personal_complaint_text">我的投诉</string>
    <string name="personal_contact_text">我的联系人</string>
    <string name="personal_logout_text">退出账号</string>
</resources>
