<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    >
    <include
        android:id="@+id/header_view"
        layout="@layout/header_left_btn"
        />
    <com.hpercent.snail.app.views.StretchScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_view"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginTop="70dip"
            >
            <RelativeLayout
                android:id="@+id/phone_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:background="@color/white"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentTop="true"
                    />
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:maxLength="11"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/submit_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@color/transparent"
                android:layout_below="@id/phone_rl"
                android:layout_marginTop="10dip"
                >

                <TextView
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_comment_btn_blue"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/get_ecode"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/checkbox_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_height"
                android:background="@color/transparent"
                android:layout_below="@id/submit_rl"
                >
                <com.hpercent.snail.app.views.CusCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="@dimen/checkbox_size"
                    android:layout_height="@dimen/checkbox_size"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    />
                <TextView
                    android:layout_toRightOf="@id/checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/agreement"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/hint_size"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="8dip"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </com.hpercent.snail.app.views.StretchScrollView>
</RelativeLayout>