<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    >
    <include
        android:id="@+id/header_view"
        layout="@layout/header_left_btn"
        />
    <com.hpercent.snail.app.views.StretchScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_view"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            >
            <RelativeLayout
                android:id="@+id/accout_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:background="@color/white"
                android:layout_marginTop="30dip"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentTop="true"
                    />
                <RelativeLayout
                    android:layout_width="@dimen/more_icon_width"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    >
                    <ImageView
                        android:layout_width="@dimen/more_icon_size"
                        android:layout_height="@dimen/more_icon_size"
                        android:background="@drawable/login_icon_account"
                        android:layout_centerInParent="true"
                        />
                </RelativeLayout>
                <EditText
                    android:id="@+id/accout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center_vertical|left"
                    android:hint="@string/login_accout_hint"
                    android:textColor="@color/black"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:layout_marginLeft="@dimen/more_icon_width"
                    android:layout_marginRight="@dimen/more_icon_width"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/passwd_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:background="@color/white"
                android:layout_below="@id/accout_rl"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentTop="true"
                    />
                <RelativeLayout
                    android:layout_width="@dimen/more_icon_width"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    >
                    <ImageView
                        android:layout_width="@dimen/more_icon_size"
                        android:layout_height="@dimen/more_icon_size"
                        android:background="@drawable/login_icon_password"
                        android:layout_centerInParent="true"
                        />
                </RelativeLayout>
                <EditText
                    android:id="@+id/passwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center_vertical|left"
                    android:hint="@string/login_password_hint"
                    android:textColor="@color/black"
                    android:maxLength="20"
                    android:inputType="textPassword"
                    android:layout_marginLeft="@dimen/more_icon_width"
                    android:layout_marginRight="@dimen/more_icon_width"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/submit_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_below="@id/passwd_rl"
                android:layout_marginTop="30dip"
                android:background="@drawable/selector_comment_btn_blue"
                >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    >
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="@dimen/more_icon_size"
                        android:layout_height="@dimen/more_icon_size"
                        android:background="@drawable/login_icon_submt"
                        android:layout_centerVertical="true"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/input_text_size"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/login_text"
                        android:layout_toRightOf="@id/icon"
                        android:layout_marginLeft="8dip"
                        />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@color/transparent"
                android:layout_below="@id/submit_rl"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/forget_pass"
                        android:layout_width="@dimen/login_hint_width"
                        android:layout_height="match_parent"
                        android:text="@string/login_forget_password"
                        android:gravity="center"
                        android:textSize="@dimen/login_hint_size"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="|"
                        android:gravity="center"
                        android:textSize="@dimen/login_hint_size"
                        />
                    <TextView
                        android:id="@+id/registe"
                        android:layout_width="@dimen/login_hint_width"
                        android:layout_height="match_parent"
                        android:text="@string/login_fast_registe"
                        android:gravity="center"
                        android:textSize="@dimen/login_hint_size"
                        />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </com.hpercent.snail.app.views.StretchScrollView>
</RelativeLayout>