<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    >
    <include
        android:id="@+id/header_view"
        layout="@layout/header_left_btn"
        />
    <com.hpercent.snail.app.views.StretchScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_view"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginTop="@dimen/registe_gap"
            >
            <TextView
                android:id="@+id/hint"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:background="@color/transparent"
                android:textSize="@dimen/hint_size"
                android:textColor="@color/hint_color"
                android:text="短信已经发送到158xxxxxxxx,请稍等"
                android:gravity="center"
                />
            <RelativeLayout
                android:id="@+id/vcode_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_below="@id/hint"
                android:background="@color/white"
                android:layout_marginTop="@dimen/registe_gap"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentTop="true"
                    />
                <EditText
                    android:id="@+id/vcode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center_vertical|left"
                    android:hint="@string/vcode_hint"
                    android:textColor="@color/black"
                    android:maxLength="8"
                    android:layout_marginLeft="@dimen/edit_margin"
                    android:layout_marginRight="@dimen/edit_margin"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/passwd_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_below="@id/vcode_rl"
                android:background="@color/white"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentTop="true"
                    />
                <EditText
                    android:id="@+id/passwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center_vertical|left"
                    android:hint="@string/password_hint"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:layout_marginLeft="@dimen/edit_margin"
                    android:layout_marginRight="@dimen/edit_margin"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/name_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_below="@id/passwd_rl"
                android:background="@color/white"
                android:layout_marginTop="@dimen/registe_gap"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentTop="true"
                    />
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center_vertical|left"
                    android:hint="@string/realname_hint"
                    android:textColor="@color/black"
                    android:maxLength="20"
                    android:layout_marginLeft="@dimen/edit_margin"
                    android:layout_marginRight="@dimen/edit_margin"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/idcard_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_below="@id/name_rl"
                android:background="@color/white"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentTop="true"
                    />
                <EditText
                    android:id="@+id/idcard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center_vertical|left"
                    android:hint="@string/idcard_hint"
                    android:textColor="@color/black"
                    android:maxLength="18"
                    android:layout_marginLeft="@dimen/edit_margin"
                    android:layout_marginRight="@dimen/edit_margin"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/submit_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@color/transparent"
                android:layout_below="@id/idcard_rl"
                android:layout_marginTop="@dimen/registe_gap"
                >

                <TextView
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_comment_btn_blue"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/regist"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/resend_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@color/transparent"
                android:layout_below="@id/submit_rl"
                android:layout_marginTop="@dimen/registe_gap"
                >

                <TextView
                    android:id="@+id/resend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_comment_btn_blue"
                    android:textSize="@dimen/input_text_size"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/regist"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </com.hpercent.snail.app.views.StretchScrollView>
</RelativeLayout>